Fix spacing for jumbotron and project heading

--- a/portfolio/style.css
+++ b/portfolio/style.css
@@ -3,6 +3,7 @@
 /* Padding below the footer and lighter body text */
 
   body {
+      margin-top: 2em;
       color: #5a5a5a;
   }
 
@@ -30,6 +31,10 @@
 
   .projects img {
     box-shadow: 10px 3px 5px gray;
+  }
+
+  .project-tile h2 {
+    margin-top: 1em;
   }
 
     /* Connect
